debhelper (10.6) UNRELEASED; urgency=medium

  * dh_installinfo: Use "xargs" so it works even if there are
    "a lot" of info files.
  * Dh_Lib: Introduce a is_build_profile_active function, which
    can be used to check if a given Build-Profile was specified.

 -- Niels Thykier <niels@thykier.net>  Tue, 27 Jun 2017 17:29:32 +0000

debhelper (10.5.1) unstable; urgency=medium

  * Dh_Lib.pm: Fix rounding error when computing how many processes
    to use.  This rounding error could cause dh-tools to use one more
    process than permitted by DEB_BUILD_OPTIONS.
  * Dh_Lib.pm: Check return value of open+close when creating a log of
    installed files.
  * Dh_Lib.pm: Implement subroutines to facility file removal and
    symlink creation without a fork+exec.
  * Dh_Lib: Avoid a fork+exec for rm -f and ln -s.
  * dh_compress: Ditto.
  * dh_installman: Ditto.
  * dh_clean: Avoid a fork+exec for rm -f.
  * dh_installdeb: Ditto.
  * dh_makeshlibs: Ditto.
  * dh_md5sums: Ditto.
  * dh_installdocs: Avoid a fork+exec for ln -s.
  * dh_strip: Ditto.
  * Dh_Lib: Avoid 1-2 stat calls in make_symlink by reusing existing
    stat calls.
  * dh_installman: Avoid a fork+exec for renaming a path.
  * dh_installdocs: Avoid unnecssary stat call.
  * dh_installman: Ditto.
  * dh_strip: Ditto.
  * dh_shlibdeps: Fix a regression where non-detached debug symbol files
    where not properly processed.  Thanks to Sven Joachim for reporting
    the issue.  (Closes: #865982)
  * dh_installman: When re-encoding manpages, use the actual manpages as
    tasks to split rather than packages.  This provides a much better
    performance if the manpages are unevenly split between the packages.
  * dh_install: Optimize some patterns into bulked "cp" calls.  This
    optimization is only applicable in some cases (notably, it is always
    disabled by --exclude).
  * dh_builddeb: Account for dbgsym packages separately when determining
    how many tasks can be run in parallel.